--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ html{
 }
 
 .mint-nft-button {
+    margin-left: 10px;
     background: orange;
 }
 
@@ -34,6 +35,7 @@ html{
 
 /* CSS */
 .button-82-pushable {
+  margin-left: 10px;
   position: relative;
   border: none;
   background: transparent;
@@ -47,6 +49,7 @@ html{
 }
 
 .button-82-shadow {
+  margin-left: 5px;
   position: absolute;
   top: 0;
   left: 0;
@@ -63,6 +66,7 @@ html{
 }
 
 .button-82-edge {
+  margin-left: 5px;
   position: absolute;
   top: 0;
   left: 0;
@@ -79,9 +83,9 @@ html{
 }
 
 .button-82-front {
+  margin-left: 10px;
   display: block;
   position: relative;
-  padding: 12px 27px;
   border-radius: 12px;
   font-size: 1.1rem;
   color: white;
@@ -97,7 +101,11 @@ html{
 @media (min-width: 768px) {
   .button-82-front {
     font-size: 1.25rem;
-    padding: 12px 42px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 10px;
+    padding-right: 10px;
+    
   }
 }
 
