--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -12,14 +12,15 @@
     width: 400px;
     margin-top: -310px;
 }
-#god-planet{
+#god-planet, #alien-planet{
     margin-left: -200px;
     margin-top: -175px;
 }
-#superhuman-planet{
+#superhuman-planet, #animal-planet{
     margin-left: 220px;
     margin-top: -200px;
 }
+
 .cyber_button{
     margin-left: 200px;
     margin-top: 200px;
