planets css finish

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -27,9 +27,9 @@
     width: 500px;
 }
 #darklink-planet{
-    width: 400px;
     margin-top: -50px;
-
+    height: 200px;
+    width: 500px;
 }
 
 .cyber_button{
